# kettlebell

./: .gitignore  app.py  dashboard.py  database_schema.md  fact_workout.sql  forms.py  models.py  pyproject.toml  rich_tree.py  seed.py  seed_faker.py  ТЗ Kettlbery.md
migrations/versions/: a892baa22d42_initial_migration.py
static/css/: style.css
templates/: _formhelpers.html  base.html  index.html  plan_form.html  plans.html  workout_detail.html  workout_form.html  workouts.html
