[project]
name = "kettlebell"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh",email = "314koval.ok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
publishable = false
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
